@startuml
!theme plain
hide circle
skinparam linetype ortho

class Ticket {
    Long id
    Long orderId
    Long eventId
    String userId
    Long seatId
    String ticketCode
    String attendeeName
    String attendeeEmail
    TicketStatus status
    LocalDateTime createdAt
    LocalDateTime updatedAt
}

class TicketTransfer {
    UUID id
    Ticket ticket
    String senderId
    String recipientEmail
    TransferStatus status
    LocalDateTime createdAt
    LocalDateTime updatedAt
}

class CheckInLog {
    Long id
    Ticket ticket
    Long eventId
    String userId
    LocalDateTime checkInTime
    String gate
    String deviceId
}

class MarketplaceListing {
    Long id
    Ticket ticket
    BigDecimal price
    String sellerId
    ListingStatus status
    LocalDateTime createdAt
    LocalDateTime updatedAt
}

enum TicketStatus {
    ISSUED
    SCANNED
    TRANSFERRED
    REFUNDED
}

enum TransferStatus {
    PENDING
    APPROVED
    REJECTED
    CANCELLED
}

enum ListingStatus {
    ACTIVE
    SOLD
    CANCELLED
}

Ticket "1" -- "0..*" TicketTransfer : history >
Ticket "1" -- "0..*" CheckInLog : generates >
Ticket "1" -- "0..1" MarketplaceListing : can have >
@enduml
